# Openvpn3-Gnome-GUI

./: README.md  pyproject.toml
data/: org.openvpn3.Gui.desktop  org.openvpn3.Gui.gschema.xml  org.openvpn3.Gui.metainfo.xml  org.openvpn3.Gui.policy  style.css
docs/: ARCHITECTURE.md  DEVELOPER.md  INSTALL.md  USER_GUIDE.md
packaging/appimage/: build-appimage.sh
packaging/debian/: README.md  changelog  control  rules
packaging/flatpak/: README.md  org.openvpn3.Gui.json
src/openvpn3_gui/: __init__.py  application.py  main.py
src/openvpn3_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openvpn3_gui/dbus/: __init__.py  log_watcher.py  session_manager.py
src/openvpn3_gui/models/: __init__.py  log_entry.py  profile.py  session.py  settings.py
src/openvpn3_gui/openvpn/: __init__.py  cli_wrapper.py  exceptions.py  parser.py
src/openvpn3_gui/services/: __init__.py  automation_service.py  backup_service.py  certificate_service.py  monitor_service.py  network_service.py  notification_service.py  openvpn_service.py  plugin_service.py  script_runner.py
src/openvpn3_gui/settings/: __init__.py  app_settings.py
src/openvpn3_gui/storage/: __init__.py  keyring.py  profile_store.py  settings_store.py
src/openvpn3_gui/tests/: conftest.py  fake_openvpn3.py  test_cli_wrapper.py  test_models_and_automation.py  test_openvpn_service.py  test_parser.py  test_storage.py
src/openvpn3_gui/tray/: __init__.py  status_icon.py
src/openvpn3_gui/ui/: __init__.py  window.py
src/openvpn3_gui/ui/dialogs/: acl_dialog.py  auth_dialog.py  confirm_dialog.py  global_search.py  import_dialog.py  profile_metadata_dialog.py
src/openvpn3_gui/utils/: __init__.py  async_utils.py  errors.py  i18n.py  logging_config.py  text.py
(+11 files in other folders)
