[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openvpn3-gui"
version = "0.1.0"
description = "A native GTK4/Libadwaita GNOME frontend for openvpn3-linux"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "OpenVPN3 GUI Contributors" }]
keywords = ["openvpn", "vpn", "gnome", "gtk4", "libadwaita"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "PyGObject>=3.46",
    "cryptography>=41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
openvpn3-gui = "openvpn3_gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/openvpn3_gui/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
ignore = [
    "S603",  # subprocess without shell=True is exactly what we want
    "E402",  # gi.require_version() must run before gi.repository imports
    "E501",  # long lines allowed where GTK builder chains are clearer unwrapped
]

[tool.ruff.lint.per-file-ignores]
"src/openvpn3_gui/tests/*" = ["S101", "S105", "S108", "SLF001"]  # asserts, fixture secrets, and /tmp paths are fine in tests

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
